# task-tracker

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b1bb2a8494aa_create_task_table.py  bd150c8306f8_add_hashed_password.py  fe74c42be36a_create_users_table.py
app/: celery_worker.py  main.py
app/api/: auth.py  ping.py  task.py  user.py
app/core/: config.py  deps.py  openapi.py  security.py
app/crud/: task.py  user.py
app/db/: __init__.py  base.py  base_class.py  deps.py  session.py
app/models/: task.py  user.py
app/schemas/: auth.py  task.py  user.py
app/tasks/: example.py
scripts/: check_db.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_security.py  test_task_repo.py
