[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = "Simple task tracker with FastAPI"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.2" }
pydantic = "^2.11"
celery = "^5.5"
redis = "^6.2"
asyncpg = "^0.30.0"
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
alembic = "^1.16.2"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
pytest-httpx = "^0.35.0"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
